--- a/javascript-amazon-project-main/amazon.html
+++ b/javascript-amazon-project-main/amazon.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Amazon Project Main</title>
+    <title>New Amazon Project</title>
 
     <!-- This code is needed for responsive design to work.
       (Responsive design = make the website look good on
@@ -45,7 +45,7 @@
 
         <a class="cart-link header-link" href="checkout.html">
           <img class="cart-icon" src="images/icons/cart-icon.png">
-          <div class="cart-quantity js-cart-quantity">0</div>
+          <div class="cart-quantity js-cart-quantity"></div>
           <div class="cart-text">Cart</div>
         </a>
       </div>
@@ -56,7 +56,6 @@
       
       </div>
     </div>
-
-    <script type ="module" src="./script/amazaon.js"></script>
+    <script type="module" src="./script/amazaon.js"></script>
   </body>
 </html>
